--- a/tm.conf
+++ b/tm.conf
@@ -1,7 +1,8 @@
-url = "http://127.0.0.1:9000/"
+url = "http://52.187.60.84:9000/"
 port = 9000
-socketPath = "qdata/tm.ipc"
-otherNodeUrls = []
-publicKeyPath = "raft/constellation.pub"
-privateKeyPath = "raft/constellation.key"
-storagePath = "qdata/constellation"
+socket = "qdata/tm.ipc"
+othernodes = ["http://52.187.58.68:9000/"]
+publickeys = ["raft/constellation.pub"]
+privatekeys = ["raft/constellation.key"]
+storage = "qdata/constellation"
+verbosity = 3
